# voting

./: .coverage  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  data.txt  docker-compose.yml  pyproject.toml  sqr_voting.db  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6eeb5bf33b07_initial_migration.py  cf542000430e_fix_user_role_field.py  df0332fb3255_polls_creation_date_adding.py
app/: config.py  main.py
app/database/: base.py  models.py  session.py
app/modules/admin/: routes.py  schemas.py  services.py
app/modules/auth/: routes.py  schemas.py  services.py
app/modules/voting/: routes.py  schemas.py  services.py
app/modules/voting/tests/: test_routes.py  test_schemas.py  test_services.py
app/shared/: logging.py  security.py
app/tests/: conftest.py  test_routes.py
app/tests/test_admin/: test_services.py
app/tests/test_auth/: test_routes.py  test_services.py
app/tests/test_voting/: test_routes.py  test_services.py
frontend/: Dockerfile  requirements.txt  streamlit_app.py
myenv/: pyvenv.cfg
