[tool.poetry]
name = "sqr-voting-system"
version = "0.1.0"
description = "A voting system for creating surveys and votes"
authors = ["Egor Nischikh <e.nischikh@innopolis.university>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
pydantic = "^2.11.3"
passlib = "^1.7.4"
uvicorn = "^0.34.2"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
pyjwt = "^2.10.1"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
bcrypt = "^4.3.0"
flake8 = "^6.1.0"
httpx = "^0.25.0"
pytest-asyncio = "^0.23.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
